--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "eslint-webpack-plugin": "^3.0.1"
   },
   "peerDependencies": {
-    "gatsby": "^3.0.0 || ^4.0.0"
+    "gatsby": "^3.0.0 || ^4.0.0 || ^5.0.0"
   },
   "devDependencies": {
     "prettier": "^2.4.1"
